# mneme-ai

./: .gitignore  README.md  pyproject.toml
mneme/: __init__.py  compaction.py  config.py  context_injector.py  entity_graph.py  episode_store.py  event_bus.py  fact_store.py  memory_api.py  message_store.py  obsidian_exporter.py  server.py  vec_mem.py
mneme/ui/ui/: index.html
mneme_mcp/: __init__.py  server.py  tools.py
scripts/: export_claude_code_to_obsidian.py  export_deerflow_to_obsidian.py  export_openclaw_to_obsidian.py  install.sh  migrate_from_memory_core.py  sync-all-to-obsidian.py
