[project]
name = "mneme-ai"
version = "0.1.0"
description = "Semantic memory layer for AI agents — vector search, knowledge graphs, and episodic memory"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Doug", email = "doug@example.com"}
]
keywords = ["ai", "memory", "vector-search", "knowledge-graph", "mcp", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "chromadb>=0.4.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
voyage = ["voyageai>=0.5.0"]
dev = ["pytest", "ruff"]
mcp = ["mcp>=1.0.0", "httpx>=0.25.0"]

[project.scripts]
mneme-server = "mneme.server:main"
mneme-export = "mneme.obsidian_exporter:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mneme"]

[tool.ruff]
line-length = 120
target-version = "py310"
